<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#e3e3e3"
        android:orientation="horizontal" >

        <com.call.tracker.customview.ButtonRoboto
            android:id="@+id/butHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:onClick="callHome"
            android:text="@string/home" />

        <com.call.tracker.customview.TextViewRoboto
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/add_contacts"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textColor="#000" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <com.call.tracker.customview.TextViewRoboto
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_would_you_like_to_add_contacts_" />

        <com.call.tracker.customview.ButtonRoboto
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:onClick="callAddExisting"
            android:text="@string/add_existing_contact_s_from_my_phone" />

        <com.call.tracker.customview.ButtonRoboto
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginRight="10dp"
            android:onClick="callAddNew"
            android:text="@string/add_a_new_contact" />
    </LinearLayout>

</LinearLayout>