<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#e3e3e3"
        android:orientation="horizontal" >

        <com.call.tracker.customview.ButtonRoboto
            android:id="@+id/butHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:onClick="callHome"
            android:text="@string/home" />

        <com.call.tracker.customview.TextViewRoboto
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/lists"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textColor="#000" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center" >

        <com.call.tracker.customview.TextViewRoboto
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#d4d4d4"
            android:gravity="center|left"
            android:text="@string/list_manager_details"
            android:textAppearance="@android:style/TextAppearance.Medium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible" >

        <com.call.tracker.customview.ButtonRoboto
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="callGot"
            android:text="@string/got_it" />

        <com.call.tracker.customview.CheckBoxRoboto
            android:id="@+id/checkdontshow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_show_again" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:visibility="invisible" >

        <com.call.tracker.customview.ButtonRoboto
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/continue_t" />
    </LinearLayout>

</LinearLayout>