<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" >

        <com.call.tracker.customview.TextViewRoboto
            android:id="@+id/textSync"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#d4d4d4"
            android:gravity="center|left"
            android:text="@string/list_manager_details"
            android:textAppearance="@android:style/TextAppearance.Medium" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutBelowSync"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center" >

        <com.call.tracker.customview.TextViewRoboto
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#d4d4d4"
            android:gravity="center|left"
            android:text="@string/sync_help"
            android:textAppearance="@android:style/TextAppearance.Medium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="invisible" >

        <com.call.tracker.customview.ButtonRoboto
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="callGot"
            android:text="@string/got_it" />

        <com.call.tracker.customview.CheckBoxRoboto
            android:id="@+id/checkdontshow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_show_again" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:gravity="center"
        android:visibility="invisible" >

        <com.call.tracker.customview.ButtonRoboto
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/continue_t" />
    </LinearLayout>

</LinearLayout>