<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#e3e3e3"
        android:orientation="horizontal" >

        <com.call.tracker.customview.ButtonRoboto
            android:id="@+id/butHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:onClick="callHome"
            android:text="@string/home" />

        <com.call.tracker.customview.TextViewRoboto
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/butHome"
            android:layout_alignBottom="@+id/butHome"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="5dp"
            android:text="@string/help"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textColor="#000" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center" >

        <com.call.tracker.customview.TextViewRoboto
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#d4d4d4"
            android:gravity="center|left"
            android:text="@string/here_apos_s_a_few_options_to_help_familiarize_yourself_with_the_app_or_answer_any_question_you_may_have"
            android:textAppearance="@android:style/TextAppearance.Medium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center" >

        <com.call.tracker.customview.TextViewRoboto
            android:id="@+id/textContact"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#d4d4d4"
            android:gravity="center|right"
            android:text="@string/contact_the_brains_of_this_operation"
            android:textAppearance="@android:style/TextAppearance.Medium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center" >

        <com.call.tracker.customview.TextViewRoboto
            android:id="@+id/textPost"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#d4d4d4"
            android:gravity="center|right"
            android:text="@string/post_a_question_to_our_facebook_page"
            android:textAppearance="@android:style/TextAppearance.Medium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center" >

        <com.call.tracker.customview.TextViewRoboto
            android:id="@+id/textTurn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#d4d4d4"
            android:gravity="center|right"
            android:text="@string/turn_on_the_in_app_help_dialogue"
            android:textAppearance="@android:style/TextAppearance.Medium" />
    </LinearLayout>

</LinearLayout>