<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main_background"
    android:orientation="vertical" >

    <FrameLayout
        android:id="@+id/FrameLayout1"
        android:layout_width="fill_parent"
        android:layout_height="44dip"
        android:background="@drawable/menu_bg" >

        <ImageButton
            android:id="@+id/ImageButton01"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="10dp"
            android:background="@drawable/home"
            android:onClick="callHome"
            android:scaleType="fitCenter" />

        <TextView
            android:id="@+id/TextView1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:text="@string/lists"
            android:textColor="@color/white"
            android:textSize="24dp" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center" >

        <com.call.tracker.customview.TextViewRoboto
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center|left"
            android:text="@string/list_manager_details"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@color/theme_color" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible" >

        <com.call.tracker.customview.ButtonRoboto
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:background="@color/theme_color"
            android:onClick="callGot"
            android:text="@string/got_it"
            android:textColor="@color/white" />

        <com.call.tracker.customview.CheckBoxRoboto
            android:id="@+id/checkdontshow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_show_again"
            android:textColor="@color/theme_color" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:visibility="invisible" >

        <com.call.tracker.customview.ButtonRoboto
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/continue_t" />
    </LinearLayout>

</LinearLayout>