<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#e3e3e3"
        android:orientation="horizontal" >

        <com.call.tracker.customview.ButtonRoboto
            android:id="@+id/butHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:onClick="callHome"
            android:text="@string/home" />

        <com.call.tracker.customview.TextViewRoboto
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/list_manager"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textColor="#000" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layoutAddNew"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="#e3e3e3"
        android:orientation="horizontal" >

        <com.call.tracker.customview.TextViewRoboto
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:paddingLeft="10dp"
            android:text="@string/add_new"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textColor="#000" />
    </RelativeLayout>

    <com.call.tracker.customview.TextViewRoboto
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/tap_for_additional_options"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textColor="#000" />

    <ListView
        android:id="@+id/listviewList"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="10dp" />

</LinearLayout>