<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="25dp"
        android:gravity="bottom"
        android:orientation="horizontal" >

        <com.call.tracker.customview.TextViewRoboto
            android:id="@+id/textName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/name"
            android:textColor="#000"
            android:textSize="16sp" />

        <View
            android:layout_width="2dp"
            android:layout_height="25dp"
            android:layout_marginRight="5dp"
            android:background="#000" />

        <ImageView
            android:id="@+id/textUrgent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.3"
            android:contentDescription="Urgency Describer"
            android:text="@string/urgent"
            android:textColor="#000"
            android:textSize="16sp" />

        <View
            android:layout_width="2dp"
            android:layout_height="25dp"
            android:layout_marginRight="5dp"
            android:background="#000" />

        <com.call.tracker.customview.TextViewRoboto
            android:id="@+id/textDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/date_recorded"
            android:textColor="#000"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>