<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main_background"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/FrameLayout1"
        android:layout_width="fill_parent"
        android:layout_height="44dip"
        android:layout_marginBottom="25dp"
        android:background="@drawable/menu_bg">

        <ImageButton
            android:id="@+id/butHome"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="10dp"
            android:background="@drawable/home"
            android:onClick="callHome"
            android:scaleType="fitCenter" />

        <TextView
            android:id="@+id/TextView1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:text="Preferences"
            android:textColor="@color/white"
            android:textSize="24dp" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/layoutSync"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical" >

        <com.call.tracker.customview.TextViewRoboto
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/sync_contacts"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textColor="@color/theme_color"
            android:visibility="gone" />

        <com.call.tracker.customview.TextViewRoboto
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/_wait_what_does_as_this_do_"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutCSV"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <com.call.tracker.customview.TextViewRoboto
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/export_contacts_as_csv"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textColor="@color/theme_color" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutSalesGoals"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <com.call.tracker.customview.TextViewRoboto
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/sales_goals"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textColor="@color/theme_color" />

        <ImageView
            android:layout_width="80dp"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/setting_switch_off" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutFeedback"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <com.call.tracker.customview.TextViewRoboto
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/facebook_contact_us"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textColor="@color/theme_color" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="bottom"
        android:layout_margin="5dp"
        android:gravity="bottom"
        android:orientation="vertical">

        <com.call.tracker.customview.TextViewRoboto
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/theme_color"
            android:gravity="center"
            android:text="@string/you_have_everything_you_need_to_nbuild_something_for_bigger_than_nyourself_nseth_godin"
            android:textAppearance="@android:style/TextAppearance.Small"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>